5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1590_1017.log
== TEST (2019-03-25 15:43:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de l1")))
t2 = radians(float(input("latidude de p2")))
g2 = radians(float(input("longitude de l2")))
d=r.acos(sin(t1)*sin(t2)+cos(t1)*coa(t2).cos(g1-g2))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d=r.acos(sin(t1)*sin(t2)+cos(t1)*coa(t2).cos(g1-g2))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:44:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de l1")))
t2 = radians(float(input("latidude de p2")))
g2 = radians(float(input("longitude de l2")))
d=r.acos(sin(t1)*sin(t2)+cos(t1)*coa(t2).cos(g1-g2))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d=r.acos(sin(t1)*sin(t2)+cos(t1)*coa(t2).cos(g1-g2))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:45:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de l1")))
t2 = radians(float(input("latidude de p2")))
g2 = radians(float(input("longitude de l2")))
r= 6371.01
d = r.acos(sin(t1)*sin(t2)+cos(t1)*coa(t2).cos(g1-g2))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r.acos(sin(t1)*sin(t2)+cos(t1)*coa(t2).cos(g1-g2))
AttributeError: 'float' object has no attribute 'acos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:46:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de l1")))
t2 = radians(float(input("latidude de p2")))
g2 = radians(float(input("longitude de l2")))
r= 6371.01
d = r*(acos(sin(t1)*sin(t2)+cos(t1)*coa(t2).cos(g1-g2)))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r*(acos(sin(t1)*sin(t2)+cos(t1)*coa(t2).cos(g1-g2)))
NameError: name 'coa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:47:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de l1")))
t2 = radians(float(input("latidude de p2")))
g2 = radians(float(input("longitude de l2")))
r= 6371.01
d = r*(acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:48:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de l1")))
t2 = radians(float(input("latidude de p2")))
g2 = radians(float(input("longitude de l2")))
r= 6371.01
d = r*(acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))
-- EXECUTION TIME:
0.20697
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
